# HTTPCommandService

./: Build.bat  CMakeLists.txt  HTTPCommandServer.pro  HTTPCommandService.pro  README.md  ThirdPartySetup.bat  common-private.cpp  common-private.h  common.h  conanfile.txt  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  controller.cpp  controller.h  crypt.h  defaultcontroller.cpp  defaultcontroller.h  delegate.h  directoryinfo.cpp  directoryinfo.h  fileinfo.cpp  fileinfo.h  header.hpp  helpcontroller.cpp  helpcontroller.h  httpservice.cpp  httpservice.h  javascriptcontroller.cpp  javascriptcontroller.h  javascriptmanager.cpp  javascriptmanager.h  js-http-request-processor.cpp  js-http-request-processor.h  main.cpp  mime_types.cpp  module.h  modulemanager.cpp  modulemanager.h  (+20 more)
conan/: conanfile.py
examples/async/: ExampleAsync.vcxproj  asynccontroller.cpp  asynccontroller.h  asyncmodule.cpp  asyncmodule.h
examples/authorization/: ExampleAuthorization.pro  ExampleAuthorization.vcxproj  authorizationmodule.cpp  authorizationmodule.h  usercontroller.cpp  usercontroller.h
examples/cppmodule/: ExampleCppModule.pro  ExampleCppModule.vcxproj  examplecontroller.cpp  examplecontroller.h  examplecppmodule.cpp  examplecppmodule.h
extensions/database/: DataBase.pro  DataBaseExtension.vcxproj  DataBaseExtension.vcxproj.filters  databasemodule.cpp  databasemodule.h  dbcontext.cpp  dbcontext.h  testcontroller.cpp  testcontroller.h
extensions/httprequest/: HTTPRequest.pro  HttpRequest.vcxproj  HttpRequest.vcxproj.filters  httprequest.cpp  httprequest.h  httprequestmodule.cpp  httprequestmodule.h  testcontroller.cpp  testcontroller.h
http/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  sslconnection.cpp  sslconnection.hpp  sslserver.cpp  sslserver.hpp
tcpnative/: tcp_connection.cpp  tcp_connection.hpp  tcp_connection_manager.cpp  tcp_connection_manager.hpp  tcp_reply.cpp  tcp_reply.hpp  tcp_request.hpp  tcp_request_handler.cpp  tcp_request_handler.hpp  tcp_request_parser.cpp  tcp_request_parser.hpp  tcp_server.cpp  tcp_server.hpp
vs/: HTTPCommandExtension.vcxproj  HTTPCommandServer.vcxproj  HTTPCommandService.sln  HTTPCommandService.vcxproj  HTTPCommandService.vcxproj.filters  JSControllerExample.js  JSControllerUnderscore.js  boost.props  config.ini  curl.props  jsoncpp.props  mysql.props  postgre.props  soci.props  v8.props  v8pp.props
websocket/: web_connection.cpp  web_connection.hpp  web_connection_manager.cpp  web_connection_manager.hpp  web_reply.cpp  web_reply.hpp  web_request.hpp  web_request_handler.cpp  web_request_handler.hpp  web_request_parser.cpp  web_request_parser.hpp  web_server.cpp  web_server.hpp
